написанны рекомендации по повторениям